--- a/src/_var.scss
+++ b/src/_var.scss
@@ -1,7 +1,9 @@
 $scissorsGradientFrom:hsl(39, 89%, 49%);
 $scissorsGradientTo:hsl(40, 84%, 53%);
-$rockGradientFrom:hsl(230, 89%, 62%);
-$rockGradientTo:hsl(230, 89%, 65%);
+$paperGradientFrom:hsl(230, 89%, 62%);
+$paperGradientTo:hsl(230, 89%, 65%);
+$rockGradientFrom:hsl(349, 71%, 52%);
+$rockGradientTo:hsl(349, 70%, 56%);
 $lizardGradientFrom:hsl(261, 73%, 60%);
 $lizardGradientTo:hsl(261, 72%, 63%);
 $cyanFrom:hsl(189, 59%, 53%);
