--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,16 @@
     justify-content: $place1;
     align-items: $place2;
 }
+@mixin gradientBorder($color1,$color2)
+{
+    border:10px solid $color1;
+    border-radius:10000px;
+    border:double 10px transparent;
+    background-image: linear-gradient(white,white),
+    linear-gradient(90deg,$color1,$color2);
+    background-origin:border-box;
+    background-clip:content-box,border-box;         
+}
 *{
     box-sizing: border-box;
     padding:0;
@@ -29,7 +39,7 @@ body{
         border-radius:5px;
         @media screen and (min-width:$mobileWidth) {
             width:60%;
-            max-width:60%;
+            max-width:500px;
         }
         @include flexBox(row,space-between ,center );
         .logo{
@@ -63,27 +73,110 @@ body{
     width:100%;
     padding:80px 0px;
     height:fit-content;
-    position:relative;
     @include flexBox(row,center ,center );
-    .pentagon{
-        width:280px;
-        height:250px;
-    }
-    .lizard,.paper,.rock,.scissorBox,.spock{
-        position:absolute;
-    }
-    .scissorBox{
-        top:60px;
-        width:100px;
-        height:100px;
+    .gameBox{
+        width:350px;
+        height:fit-content;
+        position:relative;
         @include flexBox(row,center ,center );
-        border:10px solid $scissorsGradientFrom;
-        border-radius:10000px;
-        border:double 10px transparent;
-        background-image: linear-gradient(white,white),
-        linear-gradient(90deg,$scissorsGradientFrom,$scissorsGradientTo);
-        background-origin:border-box;
-        background-clip:content-box,border-box;        
+        .pentagon{
+            width:280px;
+            height:250px;
+            @media screen and (min-width:$mobileWidth)
+            {
+                width:329px;
+                height:313px;   
+            }
+        }
+        .lizardBox,.paperBox,.rockBox,.scissorBox,.spockBox{
+            position:absolute;
+            width:80px;
+            height:80px;
+            @media screen and (min-width:$mobileWidth)
+            {
+                width:100px;
+                height:100px;
+            }
+        }
+        .lizard,.paper,.rock,.scissor,.spock
+        {
+            width:31px;
+            height:38px;
+            @media screen and (min-width:$mobileWidth)
+            {
+                width:49px;
+                height:59px;
+            }
+        }
+        .scissorBox{
+            top:-15px;
+            @include flexBox(row,center ,center );
+            @include gradientBorder($scissorsGradientFrom,$scissorsGradientTo );        
+            &:hover{
+                cursor: pointer;
+            }
+            @media screen and (min-width:$mobileWidth)
+            {
+               top:-20px;
+            }
+        }
+        .lizardBox{
+            bottom:-10px;
+            left:7%;
+            @include flexBox(row,center ,center );
+            @include gradientBorder($lizardGradientFrom,$lizardGradientTo );
+            &:hover{
+                cursor: pointer;
+            }
+            @media screen and (min-width:$mobileWidth)
+            {
+                bottom:-15px;
+                left:5%;
+            }
+        }
+        .paperBox{
+            top:40px;
+            right:5%;
+            @include flexBox(row,center ,center );
+            @include gradientBorder($paperGradientFrom,$paperGradientTo );
+            &:hover{
+                cursor: pointer;
+            }
+            @media screen and (min-width:$mobileWidth)
+            {
+                top:50px;
+                right:0;                
+            }
+        }
+        .rockBox
+        {
+            bottom:-10px;
+            right:15%;
+            @include flexBox(row,center ,center );
+            @include gradientBorder($rockGradientFrom,$rockGradientTo );
+            &:hover{
+                cursor: pointer;
+            }
+            @media screen and (min-width:$mobileWidth)
+            {
+                bottom:-20px;
+                right:5%;
+            }
+        }
+        .spockBox{
+            top:40px;
+            left:7%;
+            @include flexBox(row,center ,center );
+            @include gradientBorder($cyanFrom,$cyanTo );
+            &:hover{
+                cursor: pointer;
+            }
+            @media screen and (min-width:$mobileWidth)
+            {
+                top:50px;
+                left:0;                
+            }    
+        }
     }
 }
 /*# sourceMappingURL=bg-design.scss.map */
