--- a/src/main.scss
+++ b/src/main.scss
@@ -179,6 +179,92 @@ body{
         }
     }
 }
+.btnDiv{
+    width:100%;
+    height:fit-content;
+    @include flexBox(row,center ,center );
+    .btnContainer{
+        width:400px;
+        height:fit-content;
+        @include flexBox(row,center ,center );
+        @media screen and (min-width:$mobileWidth)
+        {
+            width:100%;
+            @include flexBox(row,flex-end ,center );
+        }
+        .btn{
+            width:150px;
+            height:50px;
+            text-transform: uppercase;
+            background-color: transparent;
+            border-radius: 10px;
+            font-size:20px;
+            letter-spacing: 3px;
+            color:white;
+            cursor: pointer;
+        }
+        @media screen and (min-width:$mobileWidth)
+        {
+            margin-right:20px;
+        }
+    }
+}
+.ruleDiv{
+    width:100%;
+    height:100vh;
+    @include flexBox(row,center ,center );
+    position:absolute;
+    display:none;
+    top:0;
+    .imgRule
+    {
+        @include flexBox(column,space-around ,center );
+        background-color:white;
+        width:100%;
+        height:100vh;
+        z-index:100;
+        border-radius: 0px;
+        .otherClose{
+            display:none;
+        }
+        .mobileClose{
+            display: block;
+        }
+        .gameRules{
+            width: 80%;
+        }
+        @media screen and (min-width:$mobileWidth)
+        {
+            .otherClose{
+                display:block;
+            }
+            .mobileClose{
+                display: none;
+            }
+            width:400px;
+            height:600px;
+            border-radius: 10px;
+        }
+        .ruleHeader{
+            width:100%;
+            height:100px;
+            @include flexBox(row,center ,center );
+            font-size:30px;
+            color:$backgroundRadialFrom;
+            text-transform: uppercase;
+            font-weight:700;
+            @media screen and (min-width:$mobileWidth)
+            {
+                justify-content: space-between;
+                padding:0px 20px;
+                height:50px;
+            }
+        }
+        .closeSign{
+            cursor: pointer;
+        }
+    }
+}
 /*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
