background transparent added for rules
 a background black transprent will appear when the rule modal will be open in desktop version

--- a/src/main.scss
+++ b/src/main.scss
@@ -216,6 +216,7 @@ body{
     position:absolute;
     display:none;
     top:0;
+    background-color:$backgroundBlackHover;
     .imgRule
     {
         @include flexBox(column,space-around ,center );
