--- a/src/App.css
+++ b/src/App.css
@@ -282,6 +282,7 @@ body {
   position: absolute;
   display: none;
   top: 0;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 .ruleDiv .imgRule {
   display: flex;
