--- a/src/_var.scss
+++ b/src/_var.scss
@@ -13,4 +13,5 @@ $scoreText:hsl(229, 64%, 46%);
 $headerOutline:hsl(217, 16%, 45%);
 $backgroundRadialFrom:hsl(214, 47%, 23%);
 $backgroundRadialTo:hsl(237, 49%, 15%);
+$backgroundBlackHover:rgba(0, 0, 0, 0.5);
 $mobileWidth:401px;
