--- a/src/_var.scss
+++ b/src/_var.scss
@@ -15,3 +15,20 @@ $backgroundRadialFrom:hsl(214, 47%, 23%);
 $backgroundRadialTo:hsl(237, 49%, 15%);
 $backgroundBlackHover:rgba(0, 0, 0, 0.5);
 $mobileWidth:401px;
+@mixin flexBox($dir,$place1,$place2)
+{
+    display:flex;
+    flex-direction: $dir;
+    justify-content: $place1;
+    align-items: $place2;
+}
+@mixin gradientBorder($color1,$color2)
+{
+    border:10px solid $color1;
+    border-radius:10000px;
+    border:double 10px transparent;
+    background-image: linear-gradient(white,white),
+    linear-gradient(90deg,$color1,$color2);
+    background-origin:border-box;
+    background-clip:content-box,border-box;         
+}
