--- a/src/main.scss
+++ b/src/main.scss
@@ -1,21 +1,8 @@
 @import "var";
-@mixin flexBox($dir,$place1,$place2)
-{
-    display:flex;
-    flex-direction: $dir;
-    justify-content: $place1;
-    align-items: $place2;
-}
-@mixin gradientBorder($color1,$color2)
-{
-    border:10px solid $color1;
-    border-radius:10000px;
-    border:double 10px transparent;
-    background-image: linear-gradient(white,white),
-    linear-gradient(90deg,$color1,$color2);
-    background-origin:border-box;
-    background-clip:content-box,border-box;         
-}
+@import "header";
+@import "gameOption";
+@import "btnDiv";
+@import "ruleDiv";
 *{
     box-sizing: border-box;
     padding:0;
@@ -24,249 +11,7 @@ body{
     width:100%;
     height:100vh;
     background-image:radial-gradient(circle,$backgroundRadialFrom,$backgroundRadialTo);
-}
-.header{
-    width:100%;
-    height:150px;
-    @include flexBox(row,center ,center );
-    .header_box{
-        max-width:290px;
-        width:290px;
-        height:130px;
-        padding:10px;
-        margin-top:20px;
-        outline:5px solid $headerOutline;
-        border-radius:5px;
-        @media screen and (min-width:$mobileWidth) {
-            width:60%;
-            max-width:500px;
-        }
-        @include flexBox(row,space-between ,center );
-        .logo{
-            width:100px;
-            height:80px;
-            @media screen and (min-width:$mobileWidth) {
-                width:114px;
-                height:115px;
-            }
-        }
-        .scoreBox{
-            background-color:white;
-            width:100px;
-            height:100px;
-            border-radius:10px;
-            @include flexBox(column,center , center);
-            .scoreHeader{
-                font-weight: 500;
-                color:$scoreText;
-                text-transform:uppercase;
-            }
-            .totalScore{
-                font-weight: 700;
-                font-size:50px;
-                color:$darkText;
-            }
-        }
-    }
-}
-.gameOption{
-    width:100%;
-    padding:80px 0px;
-    height:fit-content;
-    @include flexBox(row,center ,center );
-    .gameBox{
-        width:350px;
-        height:fit-content;
-        position:relative;
-        @include flexBox(row,center ,center );
-        .pentagon{
-            width:280px;
-            height:250px;
-            @media screen and (min-width:$mobileWidth)
-            {
-                width:329px;
-                height:313px;   
-            }
-        }
-        .lizardBox,.paperBox,.rockBox,.scissorBox,.spockBox{
-            position:absolute;
-            width:80px;
-            height:80px;
-            @media screen and (min-width:$mobileWidth)
-            {
-                width:100px;
-                height:100px;
-            }
-        }
-        .lizard,.paper,.rock,.scissor,.spock
-        {
-            width:31px;
-            height:38px;
-            @media screen and (min-width:$mobileWidth)
-            {
-                width:49px;
-                height:59px;
-            }
-        }
-        .scissorBox{
-            top:-15px;
-            @include flexBox(row,center ,center );
-            @include gradientBorder($scissorsGradientFrom,$scissorsGradientTo );        
-            &:hover{
-                cursor: pointer;
-            }
-            @media screen and (min-width:$mobileWidth)
-            {
-               top:-20px;
-            }
-        }
-        .lizardBox{
-            bottom:-10px;
-            left:7%;
-            @include flexBox(row,center ,center );
-            @include gradientBorder($lizardGradientFrom,$lizardGradientTo );
-            &:hover{
-                cursor: pointer;
-            }
-            @media screen and (min-width:$mobileWidth)
-            {
-                bottom:-15px;
-                left:5%;
-            }
-        }
-        .paperBox{
-            top:40px;
-            right:5%;
-            @include flexBox(row,center ,center );
-            @include gradientBorder($paperGradientFrom,$paperGradientTo );
-            &:hover{
-                cursor: pointer;
-            }
-            @media screen and (min-width:$mobileWidth)
-            {
-                top:50px;
-                right:0;                
-            }
-        }
-        .rockBox
-        {
-            bottom:-10px;
-            right:15%;
-            @include flexBox(row,center ,center );
-            @include gradientBorder($rockGradientFrom,$rockGradientTo );
-            &:hover{
-                cursor: pointer;
-            }
-            @media screen and (min-width:$mobileWidth)
-            {
-                bottom:-20px;
-                right:5%;
-            }
-        }
-        .spockBox{
-            top:40px;
-            left:7%;
-            @include flexBox(row,center ,center );
-            @include gradientBorder($cyanFrom,$cyanTo );
-            &:hover{
-                cursor: pointer;
-            }
-            @media screen and (min-width:$mobileWidth)
-            {
-                top:50px;
-                left:0;                
-            }    
-        }
-    }
-}
-.btnDiv{
-    width:100%;
-    height:fit-content;
-    @include flexBox(row,center ,center );
-    .btnContainer{
-        width:400px;
-        height:fit-content;
-        @include flexBox(row,center ,center );
-        @media screen and (min-width:$mobileWidth)
-        {
-            width:100%;
-            @include flexBox(row,flex-end ,center );
-        }
-        .btn{
-            width:150px;
-            height:50px;
-            text-transform: uppercase;
-            background-color: transparent;
-            border-radius: 10px;
-            font-size:20px;
-            letter-spacing: 3px;
-            color:white;
-            cursor: pointer;
-        }
-        @media screen and (min-width:$mobileWidth)
-        {
-            margin-right:20px;
-        }
-    }
-}
-.ruleDiv{
-    width:100%;
-    height:100vh;
-    @include flexBox(row,center ,center );
-    position:absolute;
-    display:none;
-    top:0;
-    background-color:$backgroundBlackHover;
-    .imgRule
-    {
-        @include flexBox(column,space-around ,center );
-        background-color:white;
-        width:100%;
-        height:100vh;
-        z-index:100;
-        border-radius: 0px;
-        .otherClose{
-            display:none;
-        }
-        .mobileClose{
-            display: block;
-        }
-        .gameRules{
-            width: 80%;
-        }
-        @media screen and (min-width:$mobileWidth)
-        {
-            .otherClose{
-                display:block;
-            }
-            .mobileClose{
-                display: none;
-            }
-            width:400px;
-            height:600px;
-            border-radius: 10px;
-        }
-        .ruleHeader{
-            width:100%;
-            height:100px;
-            @include flexBox(row,center ,center );
-            font-size:30px;
-            color:$backgroundRadialFrom;
-            text-transform: uppercase;
-            font-weight:700;
-            @media screen and (min-width:$mobileWidth)
-            {
-                justify-content: space-between;
-                padding:0px 20px;
-                height:50px;
-            }
-        }
-        .closeSign{
-            cursor: pointer;
-        }
-    }
-}
-/*# sourceMappingURL=bg-design.scss.map */
+}/*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
