--- a/src/_var.scss
+++ b/src/_var.scss
@@ -15,6 +15,7 @@ $backgroundRadialFrom:hsl(214, 47%, 23%);
 $backgroundRadialTo:hsl(237, 49%, 15%);
 $backgroundBlackHover:rgba(0, 0, 0, 0.5);
 $mobileWidth:401px;
+$tabWidth:600px;
 @mixin flexBox($dir,$place1,$place2)
 {
     display:flex;
