--- a/src/main.scss
+++ b/src/main.scss
@@ -3,6 +3,7 @@
 @import "gameOption";
 @import "btnDiv";
 @import "ruleDiv";
+@import "resultMode";
 *{
     box-sizing: border-box;
     padding:0;
@@ -11,7 +12,8 @@ body{
     width:100%;
     height:100vh;
     background-image:radial-gradient(circle,$backgroundRadialFrom,$backgroundRadialTo);
-}/*# sourceMappingURL=bg-design.scss.map */
+}
+/*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
 /*# sourceMappingURL=bg-design.scss.map */
