--- a/src/App.css
+++ b/src/App.css
@@ -84,23 +84,39 @@
     height: 313px;
   }
 }
-.gameOption .gameBox .lizardBox, .gameOption .gameBox .paperBox, .gameOption .gameBox .rockBox, .gameOption .gameBox .scissorBox, .gameOption .gameBox .spockBox {
+.gameOption .gameBox .lizardBox,
+.gameOption .gameBox .paperBox,
+.gameOption .gameBox .rockBox,
+.gameOption .gameBox .scissorBox,
+.gameOption .gameBox .spockBox {
   position: absolute;
   width: 80px;
   height: 80px;
 }
 @media screen and (min-width: 401px) {
-  .gameOption .gameBox .lizardBox, .gameOption .gameBox .paperBox, .gameOption .gameBox .rockBox, .gameOption .gameBox .scissorBox, .gameOption .gameBox .spockBox {
+  .gameOption .gameBox .lizardBox,
+  .gameOption .gameBox .paperBox,
+  .gameOption .gameBox .rockBox,
+  .gameOption .gameBox .scissorBox,
+  .gameOption .gameBox .spockBox {
     width: 100px;
     height: 100px;
   }
 }
-.gameOption .gameBox .lizard, .gameOption .gameBox .paper, .gameOption .gameBox .rock, .gameOption .gameBox .scissor, .gameOption .gameBox .spock {
+.gameOption .gameBox .lizard,
+.gameOption .gameBox .paper,
+.gameOption .gameBox .rock,
+.gameOption .gameBox .scissor,
+.gameOption .gameBox .spock {
   width: 31px;
   height: 38px;
 }
 @media screen and (min-width: 401px) {
-  .gameOption .gameBox .lizard, .gameOption .gameBox .paper, .gameOption .gameBox .rock, .gameOption .gameBox .scissor, .gameOption .gameBox .spock {
+  .gameOption .gameBox .lizard,
+  .gameOption .gameBox .paper,
+  .gameOption .gameBox .rock,
+  .gameOption .gameBox .scissor,
+  .gameOption .gameBox .spock {
     width: 49px;
     height: 59px;
   }
@@ -114,7 +130,8 @@
   border: 10px solid hsl(39deg, 89%, 49%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(39deg, 89%, 49%), hsl(40deg, 84%, 53%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(39deg, 89%, 49%), hsl(40deg, 84%, 53%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -136,7 +153,8 @@
   border: 10px solid hsl(261deg, 73%, 60%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(261deg, 73%, 60%), hsl(261deg, 72%, 63%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(261deg, 73%, 60%), hsl(261deg, 72%, 63%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -159,7 +177,8 @@
   border: 10px solid hsl(230deg, 89%, 62%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(230deg, 89%, 62%), hsl(230deg, 89%, 65%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(230deg, 89%, 62%), hsl(230deg, 89%, 65%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -182,7 +201,8 @@
   border: 10px solid hsl(349deg, 71%, 52%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(349deg, 71%, 52%), hsl(349deg, 70%, 56%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(349deg, 71%, 52%), hsl(349deg, 70%, 56%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -205,7 +225,8 @@
   border: 10px solid hsl(189deg, 59%, 53%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(189deg, 59%, 53%), hsl(189deg, 58%, 57%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(189deg, 59%, 53%), hsl(189deg, 58%, 57%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -337,7 +358,11 @@
 body {
   width: 100%;
   height: 100vh;
-  background-image: radial-gradient(circle, hsl(214deg, 47%, 23%), hsl(237deg, 49%, 15%));
+  background-image: radial-gradient(
+    circle,
+    hsl(214deg, 47%, 23%),
+    hsl(237deg, 49%, 15%)
+  );
 }
 
 .resultMode {
@@ -349,9 +374,7 @@ body {
   align-items: center;
 }
 .resultMode .showResult {
-  max-width: 400px;
-  width: 300px;
-  height: 300px;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -392,13 +415,16 @@ body {
   color: whitesmoke;
 }
 .resultMode .showResult .ChoiceDiv .winner {
-  box-shadow: rgba(255, 255, 255, 0.15) 6px 6px 50px 11px, rgba(207, 205, 205, 0.2) 0px 0px 50px 20px, rgba(255, 255, 255, 0.3) 1px 1px 150px 30px;
+  box-shadow: rgba(255, 255, 255, 0.15) 6px 6px 50px 11px,
+    rgba(207, 205, 205, 0.2) 0px 0px 50px 20px,
+    rgba(255, 255, 255, 0.3) 1px 1px 150px 30px;
 }
 .resultMode .showResult .playerChoiceLizard {
   border: 10px solid hsl(261deg, 73%, 60%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(261deg, 73%, 60%), hsl(261deg, 72%, 63%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(261deg, 73%, 60%), hsl(261deg, 72%, 63%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -406,7 +432,8 @@ body {
   border: 10px solid hsl(230deg, 89%, 62%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(230deg, 89%, 62%), hsl(230deg, 89%, 65%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(230deg, 89%, 62%), hsl(230deg, 89%, 65%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -414,7 +441,8 @@ body {
   border: 10px solid hsl(349deg, 71%, 52%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(349deg, 71%, 52%), hsl(349deg, 70%, 56%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(349deg, 71%, 52%), hsl(349deg, 70%, 56%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -422,7 +450,8 @@ body {
   border: 10px solid hsl(39deg, 89%, 49%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(39deg, 89%, 49%), hsl(40deg, 84%, 53%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(39deg, 89%, 49%), hsl(40deg, 84%, 53%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
@@ -430,7 +459,8 @@ body {
   border: 10px solid hsl(189deg, 59%, 53%);
   border-radius: 10000px;
   border: double 10px transparent;
-  background-image: linear-gradient(white, white), linear-gradient(90deg, hsl(189deg, 59%, 53%), hsl(189deg, 58%, 57%));
+  background-image: linear-gradient(white, white),
+    linear-gradient(90deg, hsl(189deg, 59%, 53%), hsl(189deg, 58%, 57%));
   background-origin: border-box;
   background-clip: content-box, border-box;
 }
